<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ru.hotmule.beaconfinder.ui.beacon.BeaconViewModel" />

        <variable
            name="syncDate"
            type="java.util.Date" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_uuid_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uuid"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_uuid"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{viewModel.beacon.uuid}"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_uuid_title"
                tools:text="@tools:sample/lorem" />

            <TextView
                android:id="@+id/tv_major_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/major"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_uuid" />

            <TextView
                android:id="@+id/tv_major"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@{String.valueOf(viewModel.beacon.major)}"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/tv_minor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_major_title"
                tools:text="0" />

            <TextView
                android:id="@+id/tv_minor_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minor"
                android:layout_marginStart="24dp"
                app:layout_constraintStart_toEndOf="@+id/tv_major_title"
                app:layout_constraintTop_toTopOf="@id/tv_major_title" />

            <TextView
                android:id="@+id/tv_minor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(viewModel.beacon.minor)}"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/tv_minor_title"
                app:layout_constraintTop_toBottomOf="@id/tv_minor_title"
                tools:text="0" />

            <TextView
                android:id="@+id/tv_distance_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/distance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_major" />

            <TextView
                android:id="@+id/tv_distance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{String.format(@string/meters, viewModel.beacon.distance)}"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_distance_title"
                tools:text="@tools:sample/lorem" />

            <ru.hotmule.beaconfinder.ui.beacon.ChartView
                android:id="@+id/chart_distance"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_distance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:top="5"
                app:bottom="0"/>

            <TextView
                android:id="@+id/tv_rssi_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rssi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chart_distance" />

            <TextView
                android:id="@+id/tv_rssi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(viewModel.beacon.rssi)}"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_rssi_title"
                tools:text="@tools:sample/lorem" />

            <ru.hotmule.beaconfinder.ui.beacon.ChartView
                android:id="@+id/chart_rssi"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_rssi"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="50dp"
                app:top="-26"
                app:bottom="-100"/>

            <TextView
                android:id="@+id/tv_sync_date_title"
                android:layout_marginTop="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_sync"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chart_rssi" />

            <TextView
                android:id="@+id/tv_sync_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                app:date="@{syncDate}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_sync_date_title"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@tools:sample/lorem"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>