<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <variable
            name="beaconsOnly"
            type="Boolean" />
        
        <variable
            name="bleDevice"
            type="ru.hotmule.beaconfinder.data.db.models.BleDevice" />
        
        <variable
            name="clickListener"
            type="ru.hotmule.beaconfinder.ui.devices.DeviceClickListener" />

    </data>

    <com.google.android.material.card.MaterialCardView
        style="@style/Widget.MaterialComponents.CardView"
        app:cardElevation="0dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/colorGrey"
        app:cardCornerRadius="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{() -> clickListener.onClick(bleDevice)}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_mac"
                android:text="@{bleDevice.mac}"
                android:textSize="24sp"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                tools:text="@tools:sample/lorem/random"/>

            <TextView
                android:id="@+id/tv_uuid_title"
                android:text="@string/uuid"
                android:layout_marginTop="8dp"
                android:visibility="@{beaconsOnly ? View.VISIBLE : View.GONE}"
                app:layout_constraintTop_toBottomOf="@id/tv_mac"
                app:layout_constraintStart_toStartOf="@id/tv_mac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_uuid"
                android:text="@{bleDevice.uuid}"
                android:layout_marginStart="6dp"
                android:visibility="@{beaconsOnly ? View.VISIBLE : View.GONE}"
                app:layout_constraintTop_toTopOf="@id/tv_uuid_title"
                app:layout_constraintStart_toEndOf="@id/tv_uuid_title"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                tools:text="@tools:sample/lorem/random"/>

            <TextView
                android:id="@+id/tv_major_title"
                android:text="@string/major"
                android:layout_marginTop="8dp"
                android:visibility="@{beaconsOnly ? View.VISIBLE : View.GONE}"
                app:layout_constraintTop_toBottomOf="@id/tv_uuid_title"
                app:layout_constraintStart_toStartOf="@id/tv_mac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/tv_major"
                android:layout_marginStart="4dp"
                android:text="@{String.valueOf(bleDevice.major)}"
                android:visibility="@{beaconsOnly ? View.VISIBLE : View.GONE}"
                app:layout_constraintTop_toTopOf="@id/tv_major_title"
                app:layout_constraintStart_toEndOf="@id/tv_major_title"
                app:layout_constraintWidth_max="50dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                tools:text="@tools:sample/lorem/random"/>

            <TextView
                android:id="@+id/tv_minor_title"
                android:text="@string/minor"
                android:layout_marginStart="8dp"
                android:visibility="@{beaconsOnly ? View.VISIBLE : View.GONE}"
                app:layout_constraintTop_toTopOf="@id/tv_major_title"
                app:layout_constraintStart_toEndOf="@id/tv_major"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/tv_minor"
                android:layout_marginStart="4dp"
                android:text="@{String.valueOf(bleDevice.minor)}"
                android:visibility="@{beaconsOnly ? View.VISIBLE : View.GONE}"
                app:layout_constraintTop_toTopOf="@id/tv_minor_title"
                app:layout_constraintStart_toEndOf="@id/tv_minor_title"
                app:layout_constraintWidth_max="50dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                tools:text="@tools:sample/lorem"/>

            <TextView
                android:id="@+id/tv_distance_title"
                android:text="@string/distance"
                android:layout_marginStart="8dp"
                android:visibility="@{beaconsOnly ? View.VISIBLE : View.GONE}"
                app:layout_constraintTop_toTopOf="@id/tv_major_title"
                app:layout_constraintStart_toEndOf="@id/tv_minor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"/>

            <TextView
                android:id="@+id/tv_distance"
                android:layout_marginStart="4dp"
                android:text="@{String.format(@string/meters, bleDevice.distance)}"
                android:visibility="@{beaconsOnly ? View.VISIBLE : View.GONE}"
                app:layout_constraintTop_toTopOf="@id/tv_minor_title"
                app:layout_constraintStart_toEndOf="@id/tv_distance_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="1"
                tools:text="@tools:sample/lorem"/>

            <TextView
                android:id="@+id/tv_rssi_title"
                android:text="@string/rssi"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_minor_title"
                app:layout_constraintStart_toStartOf="@id/tv_mac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_rssi"
                android:layout_marginStart="4dp"
                android:text="@{String.valueOf(bleDevice.rssi)}"
                app:layout_constraintTop_toTopOf="@id/tv_rssi_title"
                app:layout_constraintStart_toEndOf="@id/tv_rssi_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/lorem"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>